--- a/assets/sass/cids-theme/styles/home.sass
+++ b/assets/sass/cids-theme/styles/home.sass
@@ -12,15 +12,11 @@
                     position: fixed
                     height: fit-content
                     width: columns(10)
-                    // opacity: 1
-                    // transition: opacity 0.3s ease
-                    // transition-delay: .15s
-                    // html.is-scrolling-down &
-                    //     opacity: 0
-                &.hidden
                     opacity: 0
             figure
                 margin-top: 0
+        &.is-loaded .hero .hero-text h1
+            opacity: 1
     .block-class-centered-title
         + .block-testimonials
             margin-top: space(25)
